Added photo bucket service

--- a/FlowerPlanet/Views/Shows/Create.cshtml
+++ b/FlowerPlanet/Views/Shows/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using FlowerPlanet.Data.Enum
-@model Club
+@model Shows
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -23,11 +23,11 @@
     <span asp-validation-for="Image" class="text-danger"></span>
  </div>
   <div class="form-group">
-    <label asp-for="ClubCategory">ClubCategory</label>
-   <select asp-for="ClubCategory" asp-items="@Html.GetEnumSelectList<ClubCategory>()" class="form-control form-control-lg">
+    <label asp-for="ShowCategory">Shows Category</label>
+   <select asp-for="ShowCategory" asp-items="@Html.GetEnumSelectList<ShowCategory>()" class="form-control form-control-lg">
                          <option>--Select--</option>
    </select>
-    <span asp-validation-for="ClubCategory" class="text-danger"></span>
+    <span asp-validation-for="ShowCategory" class="text-danger"></span>
  </div>
   <div class="form-group">
     <label asp-for="Address.Street">Street</label>
