Finished image bukcet for clubs

--- a/FlowerPlanet/Views/Club/Create.cshtml
+++ b/FlowerPlanet/Views/Club/Create.cshtml
@@ -1,12 +1,13 @@
 ﻿@using FlowerPlanet.Data.Enum
-@model Club
+@using FlowerPlanet.ViewModels
+@model CreateClubViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="Create" enctype="multipart/form-data">
  <div class="form-group">
     <label asp-for="Title">Title</label>
     <input asp-for="Title" class="form-control" placeholder="Title">
@@ -17,11 +18,6 @@
     <input asp-for="Description" class="form-control" placeholder="Description">
  </div>
     <span asp-validation-for="Description" class="text-danger"></span>
- <div class="form-group">
-    <label asp-for="Image">Image</label>
-    <input asp-for="Image" class="form-control" placeholder="Image">
-    <span asp-validation-for="Image" class="text-danger"></span>
- </div>
   <div class="form-group">
     <label asp-for="ClubCategory">ClubCategory</label>
    <select asp-for="ClubCategory" asp-items="@Html.GetEnumSelectList<ClubCategory>()" class="form-control form-control-lg">
@@ -44,8 +40,11 @@
     <input asp-for="Address.state" class="form-control" placeholder="State">
     <span asp-validation-for="Address.state" class="text-danger"></span>
  </div>
-
-
-
+ <div class="form-group">
+    <label asp-for="Image">Image</label>
+    <input asp-for="Image" type="file" class="form-control" placeholder="Image">
+    <span asp-validation-for="Image" class="text-danger"></span>
+ </div>
+<br />
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
