--- a/FlowerPlanet/Views/Shows/Create.cshtml
+++ b/FlowerPlanet/Views/Shows/Create.cshtml
@@ -1,12 +1,13 @@
 ﻿@using FlowerPlanet.Data.Enum
-@model Shows
+@using FlowerPlanet.ViewModels
+@model CreateShowsViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="Create" enctype="multipart/form-data">
  <div class="form-group">
     <label asp-for="Title">Title</label>
     <input asp-for="Title" class="form-control" placeholder="Title">
@@ -17,17 +18,12 @@
     <input asp-for="Description" class="form-control" placeholder="Description">
  </div>
     <span asp-validation-for="Description" class="text-danger"></span>
- <div class="form-group">
-    <label asp-for="Image">Image</label>
-    <input asp-for="Image" class="form-control" placeholder="Image">
-    <span asp-validation-for="Image" class="text-danger"></span>
- </div>
   <div class="form-group">
-    <label asp-for="ShowCategory">Shows Category</label>
-   <select asp-for="ShowCategory" asp-items="@Html.GetEnumSelectList<ShowCategory>()" class="form-control form-control-lg">
+    <label asp-for="ShowsCategory">Shows Category</label>
+   <select asp-for="ShowsCategory" asp-items="@Html.GetEnumSelectList<ShowCategory>()" class="form-control form-control-lg">
                          <option>--Select--</option>
    </select>
-    <span asp-validation-for="ShowCategory" class="text-danger"></span>
+    <span asp-validation-for="ShowsCategory" class="text-danger"></span>
  </div>
   <div class="form-group">
     <label asp-for="Address.Street">Street</label>
@@ -44,8 +40,11 @@
     <input asp-for="Address.state" class="form-control" placeholder="State">
     <span asp-validation-for="Address.state" class="text-danger"></span>
  </div>
-
-
-
+ <div class="form-group">
+    <label asp-for="Image">Image</label>
+    <input asp-for="Image" type="file" class="form-control" placeholder="Image">
+    <span asp-validation-for="Image" class="text-danger"></span>
+ </div>
+<br />
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
