--- a/FlowerPlanet/Views/Club/Delete.cshtml
+++ b/FlowerPlanet/Views/Club/Delete.cshtml
@@ -1,9 +1,9 @@
 ﻿@using FlowerPlanet.Data.Enum
-@using FlowerPlanet.ViewModels
-@model EditClubViewModel
+@model Club
 
+<h1>Are you sure you want to delete this club?</h1>
 
-<form method="post" asp-action="Edit" enctype="multipart/form-data">
+<form method="post" asp-action="Delete" enctype="multipart/form-data">
     <input type="hidden" value="AddressId" id="AddressId" />
     <div class="form-group">
         <label asp-for="Title">Title</label>
@@ -16,7 +16,7 @@
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="ClubCategory">Clubs Category</label>
+        <label asp-for="ClubCategory">Club Category</label>
         <select asp-for="ClubCategory" asp-items="@Html.GetEnumSelectList<ClubCategory>()" class="form-control">
             <option selected="selected" value="">--Select--</option>
         </select>
@@ -43,5 +43,10 @@
         <span asp-validation-for="Image" class="text-danger"></span>
 
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    </form>
+    <div class="form-group">
+        <form action="Delete" method="post">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Confirm" class="btn btn-danger float-right mt-3" />
+        </form>
+     </div>
