--- a/FlowerPlanet/Views/Shows/Edit.cshtml
+++ b/FlowerPlanet/Views/Shows/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using FlowerPlanet.Data.Enum
 @using FlowerPlanet.ViewModels
-@model EditClubViewModel
+@model EditShowViewModel
 
 
 <form method="post" asp-action="Edit" enctype="multipart/form-data">
@@ -16,11 +16,11 @@
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="ClubCategory">Clubs Category</label>
-        <select asp-for="ClubCategory" asp-items="@Html.GetEnumSelectList<ClubCategory>()" class="form-control">
+        <label asp-for="ShowCategory">Shows Category</label>
+        <select asp-for="ShowCategory" asp-items="@Html.GetEnumSelectList<ClubCategory>()" class="form-control">
             <option selected="selected" value="">--Select--</option>
         </select>
-        <span asp-validation-for="ClubCategory" class="text-danger"></span>
+        <span asp-validation-for="ShowCategory" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Address.Street">Street</label>
