--- a/FlowerPlanet/Views/Shows/Index.cshtml
+++ b/FlowerPlanet/Views/Shows/Index.cshtml
@@ -21,9 +21,12 @@
                    <p class="card-text">@item.Description</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a type="btn btn-success" asp-controller="Club" asp-action="Detail" asp-route-id="@item.Id"
+                      <a type="btn btn-success" asp-controller="shows" asp-action="Detail" asp-route-id="@item.Id"
                               class="btn btn-sm btn-outline-secondary">View</a>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <a type="btn btn-success" asp-controller="shows" asp-action="Edit" asp-route-id="@item.Id"
+                              class="btn btn-sm btn-outline-secondary" >Edit</a>
+                      <a type="btn btn-success" asp-controller="shows" asp-action="Delete" asp-route-id="@item.Id"
+                              class="btn btn-sm btn-outline-secondary">Delete</a>
                     </div>
                     <small class="text-muted">@item.ShowCategory</small>
                   </div>
