--- a/FlowerPlanet/Views/Shared/_Layout.cshtml
+++ b/FlowerPlanet/Views/Shared/_Layout.cshtml
@@ -28,6 +28,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Index">Shows</a>
                         </li>
+                        <li
+                            class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account"
+                              asp-action="Login">Login</a>
+                        </li>
                     </ul>
                 </div>
             </div>
