--- a/FlowerPlanet/Views/Shared/_Layout.cshtml
+++ b/FlowerPlanet/Views/Shared/_Layout.cshtml
@@ -28,10 +28,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Index">Shows</a>
                         </li>
-                        <li
-                            class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account"
                               asp-action="Login">Login</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account"
+                              asp-action="Register">Register</a>
                         </li>
                     </ul>
                 </div>
