--- a/FlowerPlanet/Views/Shared/_Layout.cshtml
+++ b/FlowerPlanet/Views/Shared/_Layout.cshtml
@@ -28,14 +28,29 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Index">Shows</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account"
-                              asp-action="Login">Login</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account"
-                              asp-action="Register">Register</a>
-                        </li>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard"
+                                asp-action="Index">Dashboard</a>
+                         </li>
+                         <li class="nav-item">
+                                <form asp-area="" asp-controller="Account" asp-action="Logout">
+                                    <button class="btn btn-outline-danger">Logout</button>
+                                </form>
+                         </li>
+                        }
+                        else
+                        {
+                         <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account"
+                                 asp-action="Login">Login</a>
+                         </li>
+                         <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="account" 
+                                asp-action="Register">Register</a>
+                         </li>
+                        }
                     </ul>
                 </div>
             </div>
