--- a/FlowerPlanet/Views/Shows/Index.cshtml
+++ b/FlowerPlanet/Views/Shows/Index.cshtml
@@ -23,10 +23,13 @@
                     <div class="btn-group">
                       <a type="btn btn-success" asp-controller="shows" asp-action="Detail" asp-route-id="@item.Id"
                               class="btn btn-sm btn-outline-secondary">View</a>
-                      <a type="btn btn-success" asp-controller="shows" asp-action="Edit" asp-route-id="@item.Id"
-                              class="btn btn-sm btn-outline-secondary" >Edit</a>
-                      <a type="btn btn-success" asp-controller="shows" asp-action="Delete" asp-route-id="@item.Id"
-                              class="btn btn-sm btn-outline-secondary">Delete</a>
+                              @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                    {
+                                  <a type="btn btn-success" asp-controller="shows" asp-action="Edit" asp-route-id="@item.Id"
+                                     class="btn btn-sm btn-outline-secondary" >Edit</a>
+                                  <a type="btn btn-success" asp-controller="shows" asp-action="Delete" asp-route-id="@item.Id"
+                                     class="btn btn-sm btn-outline-secondary">Delete</a>
+                                    }             
                     </div>
                     <small class="text-muted">@item.ShowCategory</small>
                   </div>
