--- a/FlowerPlanet/Views/Dashboard/Index.cshtml
+++ b/FlowerPlanet/Views/Dashboard/Index.cshtml
@@ -1,6 +1,41 @@
-﻿@*
+﻿@using FlowerPlanet.ViewModels
+@using Microsoft.AspNetCore.Identity
+@model DashboardViewModel
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
-<h1>Dashy</h1>
+<h1 class="display-4 fw-normal">User Dashboard</h1>
+<a type="button" class="btn btn-primary" asp-area="" asp-controller="Club" asp-action="Create">Create Club</a>
+<a type="button" class="btm btn-primary" asp-area="" asp-controller="Shows" asp-action="Create">Create show</a>
+<div class="album py-5 bg-light">
+    <div class="container">
+        <h2 class="display-4 fw-normal">Your Shows</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          @foreach (var item in Model.Shows)
+           {
+              <div class="col">
+                  <div class="card shadow-sm">
+                      <svg class="bs-placeholder-img card-img-top" width="100%" height="225"
+                      xmlns="http://www.w3.org/2000/svg" role="img" aria-label="placeholder: Thumbnail"
+                       preserveAspectRatio="xMidYMid slice" focusable="false">
+                       <title>Placeholder</title>
+                       <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
+                          dy=".3em">Thumbnail</text>
+                      </svg>
+
+                      <div class="card-body">
+                          <p class="card-text"></p>
+                          <div class="d-flex justify-content-between align-items-center">
+                              <div class="btn-group">
+                                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                              </div>
+                              <small class="text-muted">9 mins</small>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+           }
