--- a/FlowerPlanet/Views/User/Index.cshtml
+++ b/FlowerPlanet/Views/User/Index.cshtml
@@ -1,7 +1,34 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using FlowerPlanet.ViewModels
+@model List<UserViewModel>
 
-<h1>users</h1>
+<div class="album py-5 bg-light">
+    <div class="container"">
+        <div class="row">
+            @foreach(var items in Model)
+            {
+              <div class="col-md-4">
+              <div class="cardw mb-4 boc-shadow">
+              @*img class="card-img-top" src="@item.Image" width+"100%" height="225" alt+"card image cap*@
+              <div class="card-body">
+                  <p class="card-text">@items.UserName</p>
+                  <p class="card-text">@items.FavPlant</p>
+                  <p class="card-text">@items.NumPlants</p>
+                  <div class="d-flex justify-content-between align-items-center">  
+                      <div class="btn-group">
+                      <a type="btn btn-success" asp-controller="User" asp-action="Detail" asp-route-id="@items.Id"
+                      class="btn btn-sm btn-outline-secondary">view</a>
+                      @if(User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                      {
+                          <a asp-controller="Club" asp-action="Edit" asp-route-id="@items.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                          <a asp-controller="Club" asp-action="Delete" asp-route-id="@items.Id" class="bntn btn-sm btn-outline-secondary">Delete</a>
+                      }
+                      </div>
+                      @*<small class="text-muted">@item.ClubCategory</small>*@
+                   </div>
+                 </div>
+               </div>
+             </div>
+            }
+        </div>
+    </div>
+</div>
