--- a/FlowerPlanet/Views/Dashboard/EditUserProfile.cshtml
+++ b/FlowerPlanet/Views/Dashboard/EditUserProfile.cshtml
@@ -1,5 +1,32 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using FlowerPlanet.ViewModels
+@model EditUserDashboardViewModel
+
+<form method="post" asp-action="EditUserProfile" enctype="multipart/form-data">
+   <input type="hidden" id="Id" name="Id" asp-for="Id" />
+   <div class="form-group">
+       <label asp-for="FavPlant">Favorite Plant?</label>
+       <input asp-for="FavPlant" class="form-control" placeholder="FavPlant"/>
+       <span asp-validation-for="FavPlant" class="text-danger"></span>
+   </div>
+   <div class="form-group">
+       <label asp-for="NumPlants">Number of plants?</label>
+       <input asp-for="NumPlants" class="form-control" placeholder="NumPlants"/>
+       <span asp-validation-for="NumPlants" class="text-danger"></span>
+   </div>
+   <div class="form-group">
+       <label asp-for="City">What city do you live in?</label>
+       <input asp-for="City" class="form-control" placeholder="City"/>
+       <span asp-validation-for="City" class="text-danger"></span>
+   </div>
+   <div class="form-group">
+       <label asp-for="State">What state do you live in?</label>
+       <input asp-for="State" class="form-control" placeholder="State"/>
+       <span asp-validation-for="State" class="text-danger"></span>
+   </div>      
+   <div class="form-group">
+       <label asp-for="Image">Please use an image for your profile picture</label>
+       <input asp-for="Image" type="file" class="form-control" placeholder="Image"/>
+       <span asp-validation-for="Image" class="text-danger"></span>
+   </div> 
+   <button type="submit" class="btn btn-primary">Submit</button>
+</form>
