Finsihed detail page for club and added indesx page for dashboard

--- a/FlowerPlanet/Views/Club/Detail.cshtml
+++ b/FlowerPlanet/Views/Club/Detail.cshtml
@@ -23,8 +23,9 @@
        <h3 class="my-3">Project details</h3>
         <ul>
             <li></li>
+            <li>@Model.Address.Street</li>
             <li>@Model.Address.city</li>
-            <li>@Model.Address.city</li>
+            <li>@Model.Address.state</li>
             <li>@Model.ClubCategory</li>
         </ul>     
      </div>
