--- a/FlowerPlanet/Views/Home/Index.cshtml
+++ b/FlowerPlanet/Views/Home/Index.cshtml
@@ -38,7 +38,8 @@
                                 <p class="card-text">@item.Description</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                          <a type="btn btn-success" asp-controller="Club" asp-action="Detail" asp-route-id="@item.Id"
+                                   class="btn btn-sm btn-outline-secondary">View</a>
                                     </div>
                                         <small class="text-muted">9 mins</small>
                                 </div>
