--- a/FlowerPlanet/Views/Home/Index.cshtml
+++ b/FlowerPlanet/Views/Home/Index.cshtml
@@ -12,10 +12,11 @@
             app!
         </p>
         <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary call to action</a>
+            <a class="btn btn-primary my-2" asp-area="" asp-controller="account" 
+                                asp-action="Register">Sign Up!</a>
+            <a class="btn btn-secondary my-2" asp-area="" asp-controller="Shows" asp-action="Index" >Find Clubs near you!</a>
         </p>
-    </div>
+    </div> 
 </section>
 <div class="album py-5 bg-light">
     <div class="container">
