--- a/FlowerPlanet/Views/Club/Create.cshtml
+++ b/FlowerPlanet/Views/Club/Create.cshtml
@@ -5,47 +5,79 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-}
 
-<form method="post" asp-action="Create" enctype="multipart/form-data">
-    <input type="hidden" id="AppUserId" name="AppUserId" asp-for="AppUserId" />
- <div class="form-group">
-    <label asp-for="Title">Title</label>
-    <input asp-for="Title" class="form-control" placeholder="Title">
-    <span asp-validation-for="Title" class="text-danger"></span>
- </div>
- <div class="form-group">
-    <label asp-for="Description">Description</label>
-    <input asp-for="Description" class="form-control" placeholder="Description">
- </div>
-    <span asp-validation-for="Description" class="text-danger"></span>
-  <div class="form-group">
-    <label asp-for="ClubCategory">ClubCategory</label>
-   <select asp-for="ClubCategory" asp-items="@Html.GetEnumSelectList<ClubCategory>()" class="form-control form-control-lg">
-                         <option>--Select--</option>
-   </select>
-    <span asp-validation-for="ClubCategory" class="text-danger"></span>
- </div>
-  <div class="form-group">
-    <label asp-for="Address.Street">Street</label>
-    <input asp-for="Address.Street" class="form-control" placeholder="Street">
-    <span asp-validation-for="Address.Street" class="text-danger"></span>
- </div>
-  <div class="form-group">
-    <label asp-for="Address.city">City</label>
-    <input asp-for="Address.city" class="form-control" placeholder="City">
-    <span asp-validation-for="Address.city" class="text-danger"></span>
- </div>
- <div class="form-group">
-    <label asp-for="Address.state">State</label>
-    <input asp-for="Address.state" class="form-control" placeholder="State">
-    <span asp-validation-for="Address.state" class="text-danger"></span>
- </div>
- <div class="form-group">
-    <label asp-for="Image">Image</label>
-    <input asp-for="Image" type="file" class="form-control" placeholder="Image">
-    <span asp-validation-for="Image" class="text-danger"></span>
- </div>
-<br />
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+}
+ <div class="navbar-container">
+    </div>
+    <div class="main-container">
+      <section class="space-sm">
+        <div class="container">
+          <div class="row mb-5">
+            <!--end of col-->
+          </div>
+          <!--end of row-->
+          <div class="row flex-md-row card card-md">
+            <div class="card-body bg-secondary">
+              <div class="text-center mb-5">
+                <h1 class="h2 mb-2">Create your own plant club!</h1>
+                <span>Bringing all plant lovers together</span>
+              </div>
+              <div class="row justify-content-center">
+                <div class="col-6 col-lg-5">
+                  <form method="post" asp-action="Create" enctype="multipart/form-data">
+                   <input type="hidden" id="AppUserId" name="AppUserId" asp-for="AppUserId" />
+                    <div class="form-row form-group">
+                      <div class="col">                        
+                        <input asp-for="Title" class="form-control form-control-lg" placeholder="Title" />
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                      </div>
+                      <div class="col">                        
+                        <select asp-for="ClubCategory" asp-items="@Html.GetEnumSelectList<ClubCategory>()" class="form-control form-control-lg">
+                                <option>--Select--</option>
+                        </select>
+                        <span asp-validation-for="ClubCategory" class="text-danger"></span>
+                      </div>
+                    </div>
+                    <div class="form-row form-group">
+                      <div class="col">                       
+                        <input asp-for="Description" class="form-control form-control-lg" placeholder="Description" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                      </div>
+                    </div> 
+                    <div class="form-row form-group">
+                      <div class="col">                        
+                        <input asp-for="Address.Street" class="form-control form-control-lg" placeholder="Street" />
+                        <span asp-validation-for="Address.Street" class="text-danger"></span>
+                      </div>
+                    </div>
+                    <div class="form-row form-group">
+                      <div class="col">                        
+                        <input asp-for="Address.city" class="form-control form-control-lg" placeholder="City" />
+                        <span asp-validation-for="Address.city" class="text-danger"></span>
+                      </div>
+                      <div class="col">                        
+                        <input asp-for="Address.state" class="form-control form-control-lg" placeholder="State" />
+                        <span asp-validation-for="Address.state" class="text-danger"></span>
+                      </div>
+                    </div>
+                    <div class="form-row form-group">
+                      <div class="col">                        
+                        <input asp-for="Image" type="file" class="form-control form-control-lg" placeholder="Image" />
+                        <span asp-validation-for="Image" class="text-danger"></span>
+                      </div>
+                    </div>
+                    <div class="form-row form-group">
+                      <div class="col">
+                        <button class="btn btn-block btn-success btn-lg" type="submit">Create Account</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--end of container-->
+      </section>
+      <!--end of section-->
+    </div
