--- a/FlowerPlanet/wwwroot/css/site.css
+++ b/FlowerPlanet/wwwroot/css/site.css
@@ -1,6 +1,11 @@
 html {
   font-size: 14px;
 }
+h1{
+ font-family:'Franklin Gothic';
+ font-size: large;
+        
+}
 
 @media (min-width: 768px) {
   html {
@@ -14,5 +19,5 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 }
